Neame Fix of remote files

--- a/nextflow.config
+++ b/nextflow.config
@@ -58,7 +58,7 @@ params.sickle_additional_args = ''
 params.adapters_fasta = 'https://raw.githubusercontent.com/edwardbirdlab/contam/refs/heads/main/element_aviti_concat.fasta'
 
 // TSV of Adapter/Index Sequences
-params.adapter_tsv = 'http://raw.githubusercontent.com/edwardbirdlab/contam/refs/heads/main/element_aviti_concat.tsv'
+params.adapters_tsv = 'http://raw.githubusercontent.com/edwardbirdlab/contam/refs/heads/main/element_aviti_concat.tsv'
 
 
 // Load base.config by default for all pipelines
