--- a/nextflow.config
+++ b/nextflow.config
@@ -19,11 +19,9 @@ params.publish_dir_mode = 'defualt' // Options: 'defualt', copy', 'symlink', 'li
 params.workflow_opt = 'cleaup_se' // (cleaup_se, multiqc)
 
 
-// Short Read Settings
-
-params.fastp_q = '20'  // Average Q score for fastp - Short read Only
-
-params.fastp_minlen = '60'
+// Timeline Settings
+report.overwrite = 'true'
+timeline.overwrite = 'true'
 
 /*
 Select Steps (True = Run Aditional Step, False = Don't run it):
@@ -49,6 +47,10 @@ params.sickle_type =  'illumina'
 params.sickle_qual = '20'
 params.sickle_len = '50'
 params.sickle_additional_args = ''
+
+// FastP Settings
+params.fastp_q = '20'  // Average Q score for fastp - Short read Only
+params.fastp_minlen = '60'
 
 
 
