--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,7 @@ params.project_name = 'DEFAULT_PROJECT_NAME'
 
 params.publish_dir_mode = 'defualt' // Options: 'defualt', copy', 'symlink', 'link'  Note: Defualt recommended (copy, exept on resume). When using link (Hardlink) output dir and work dir must be on the same filesystem 
 
-params.workflow_opt = 'cleaup_se' // (cleaup_se, multiqc)
+params.workflow_opt = 'cleanup_se' // (cleanup_se, multiqc, cleanup_pe)
 
 
 // Timeline Settings
